--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@tanstack/react-query": "^5.53.2",
+    "axios": "^1.7.7",
     "emoji-mart": "^5.5.2",
     "firebase": "^10.7.2",
     "next": "14.1.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
+    "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
